Gave an example of how to use the new image